Provide column extractor method
