# docs/swagger.json
@@ -11,6 +11,46 @@
     },
     "basePath": "/api/v1",
     "paths": {
+        "/read/columns": {
+            "post": {
+                "description": "transform given Excel file to JSON",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Readers"
+                ],
+                "summary": "Read Excel file column by column",
+                "parameters": [
+                    {
+                        "description": "The Excel file to convert",
+                        "name": "file",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/services.Output"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/read/lines": {
             "post": {
                 "description": "transform given Excel file to JSON",
